@@ -16,11 +16,11 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston,
  *  MA  02111-1307  USA
  *
- *  Copyright: 2002-2007 by Henrik Just
+ *  Copyright: 2002-2023 by Henrik Just
  *
  *  All Rights Reserved.
  * 
- *  Version 0.5 (2007-07-27)
+ *  Version 1.7.1 (2023-07-27)
  *
  */
 
@@ -29,12 +29,12 @@ package writer2xhtml.xhtml;
 import org.w3c.dom.Element;
 
 /**
- * Helper class (a struct) to contain information about a Link (used to manage
- * links to be resolved later) 
+ * Helper class (a struct) to contain information about a Link (used to manage links to be resolved later) 
  */
 final class LinkDescriptor {
     Element element; // the a-element
     String sId; // the id to link to
     int nIndex; // the index of *this* file
+    boolean bPageRef = false; // true if this is a reference to a page
 }
 
